# proveria

./: .dockerignore  .env.example  .gitignore  .prettierignore  Cargo.toml  README.md  SECURITY.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.github/workflows/: proveria-cli-release.yml
apps/api/: Dockerfile  package.json  (+1 more)
apps/proveria-cli/: Cargo.toml  README.md
apps/proveria-cli/src/: main.rs
docs/: aws-dev-deploy-checklist.md  checkpoint-desktop-first.md  cli-api-first-restart.md  cli-release-packaging.md  cli.md  corp-api-docs-consumption.md  desktop-testing.md  evaluation-script.md  feedback.md  future-product-backlog.md  getting-started.md  human-qa-checklist.md  human_qa_cli_compliance.md  human_qa_v2.md  human_qa_v3.md  human_qa_v5.md  local-happy-path.md  proveria-cli-v0.1.0-release-checklist.md  public-api-examples.md  public-api-integration-policy.md  qa-walkthrough.md  receipt.json  v1  v1-completion-checklist.md  v1-known-limitations.md  v1-qa-signoff.md  v1-release-notes.md  v1-security-and-error-review.md  v2-completion-checklist.md  v2-known-limitations.md  v2-qa-signoff.md  v2-roadmap.md  v3-completion-checklist.md  v3-known-limitations.md  v3-qa-signoff.md  v3-roadmap.md  v4-api-foundation.md  v4-closeout.md  v4-completion-checklist.md  v4-roadmap.md  (+16 more)
scripts/: check-cli-release-version.sh  cli-release-smoke.sh  local-exact-image.sh  local-happy-path.sh  local-ocr-pdf.sh  local-pdf-text-layer.sh  render-homebrew-formula.sh  scripts.txt  v1-release-check.sh  v5-tail-qa-smoke.sh
(+189 files in other folders)
