[package]
name = "proveria"
description = "Proveria CLI for local hashing, attestations, receipts, and API workflows"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "proveria"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
dirs = "6.0"
hex = "0.4"
regex = "1.11"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1.45", features = ["macros", "rt-multi-thread", "time"] }
unicode-normalization = "0.1"
